public/css/style.css
.box {
    box-shadow: 0 22px 70px 4px rgba(0, 0, 0, 0.56);
    border: 2px solid black;
    width: 75%;
    border-radius: 12px;
    margin-left: 12.5%;
    text-align: center;
}

.img_game{
    height: 66%;
    margin:0 auto;
    position: relative;
    right:45%;
}

.li_game{
    padding:0;
    display: inline-block; 
    list-style-type: none;
    width: 160px;
    background:#204e4b;
    height:250px;
    border-radius: 10px;
    overflow:hidden;
    margin:20px;
}

.li_game h2{
    font-size: 14px;
    text-align: center;
    margin-left: 5px;
    color:white;
    font-family:'roboto';

}
.li_game p{
    font-size: 14px;
    text-align: left;
    color:white;
    font-family: Arial;
    margin-left: 5px;
    text-align: center;
}

@font-face {
font-family: 'roboto';
src: url('../fonts/Roboto-Regular.ttf');
font-weight: 900;
}
.game{
    width: 150px;
    margin: 20px;
}
.li_game{
    display: inline-table;
    list-style-type: none;
    width: 150px;
}

